# OberonCompiler

./: .gitignore  Asm.h  LexicalAnalyzer.h  README.md  SymTable.cpp  TempMap.h  paramByReference.obr
hw6/: LexicalAnalyzer.h  Makefile  Parser.cpp  Parser.h  SymTable.cpp  SymTable.h  main.cpp  oberon_ex2.txt
hw7/: 7a.TAC  7a.obr  7b.TAC  7b.obr  7c.TAC  7c.obr  7d.TAC  7d.obr  CMakeLists.txt  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Makefile  Parser.cpp  Parser.h  SymTable.cpp  TAC.cpp  TAC.h  TempMap.cpp  TempMap.h  ex_sym_tab.h  main.cpp  oberon_ex2.TAC  oberon_ex2.txt  test2.TAC  test2.obr  test3.TAC  test3.obr  test4.TAC  test4.obr  test74.TAC  test75.obr  test77.obr
hw8/: Asm.cpp  Asm.h  CMakeLists.txt  Gregg8  LexicalAnalyzer.cpp  LexicalAnalyzer.h  LiteralTable.cpp  LiteralTable.h  Makefile  Parser.cpp  Parser.h  SymTable.cpp  SymTable.h  TAC.cpp  TAC.h  TempMap.h  age.obr  main.cpp  oberon_ex1.txt  oberon_ex2.TAC  oberon_ex3.txt  test1.TAC  test1.obr  test71.TAC  test71.asm  test71.obr  test72.TAC  test72.asm  test72.obr  test73.TAC  test73.asm  test73.obr  test74.obr  test76.obr  test78.obr  test81.TAC  test81.asm  test81.obr
lexical_analyzer/: CMakeLists.txt  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Makefile  ReservedWords.h  a.out  hw1  main.cpp  settings.json  test1.txt  test2.txt  test4.txt  test5.txt  test6.txt  test7.txt
parser/: CMakeLists.txt  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Makefile  Parser.cpp  Parser.h  launch.json  (+8 more)
sym_table/: CMakeLists.txt  Makefile  Parser.h  SymTable.cpp  SymTable.h  main.cpp  t33.obr  t34.obr  t38.obr  test5.txt
(+21 files in other folders)
